--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag "course_content", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "courses/chart", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "courses/main", "data-turbolinks-track" => true %>
-
+<%= javascript_include_tag "courses/past_exam", "data-turbolinks-track" => true %>
 <div class="row">
 	<div class="col-md-9 scroll-content col-md-offset-1">
 		<div class="row" id="tc" >
