--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -51,7 +51,7 @@
 		<div href="/courses/" class="sm-func-container clickable-hover" >
 			<p class="text-center index-func-desc" style=""><%=fa_icon "file-text-o" %>找心得</p>
 		</div>
-		<div href="/courses/" class="sm-func-container clickable-hover" >
+		<div href="/user/" class="sm-func-container clickable-hover" >
 			<p class="text-center index-func-desc" style=""><%=fa_icon "graduation-cap" %>算學分</p>
 		</div>
 	</div>
@@ -80,7 +80,7 @@
 			
 			<div class="container icon-container" style="">
 				<div class="row row-margin">
-				<div class="circle clickable-hover" href="/user/special_list">
+				<div class="circle clickable-hover" href="/user/">
 					<%=fa_icon "graduation-cap 5x" %>
 					
 					<!--<span class="glyphicon glyphicon-list-alt"style="font-size:70px;"></span>-->
