--- a/app/views/course_maps/show.html.erb
+++ b/app/views/course_maps/show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "coursemap_manage", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "course_maps/manage", "data-turbolinks-track" => true %>
 
 <h3>課程地圖 - <%=@course_map.name%></h3>  
 
@@ -9,7 +9,7 @@
 		<td>適用系所：</td>
 		<td class='cm-head-dep'><%=(@course_map.department_id==0)? "不指定" : @course_map.department.ch_name%></td>
 		<td>適用學期：</td>
-		<td class='cm-head-sem'><%=(@course_map.semester_id==0)? "不指定" : @course_map.semester.year%></td>
+		<td class='cm-head-year'><%=(@course_map.year==0)? "不指定" : @course_map.year%></td>
 		<td>應修學分：</td>
 		<td class='cm-head-grade'><%=@course_map.total_credit%></td>
 	<tr>
@@ -22,36 +22,36 @@
 
 <hr>
 <h3>課程內容</h3>
-<div id="start2_content"></div>
+<div id="course-map-content"></div>
 </div>
 
 <script>
 var map_id = <%=j @course_map.id.to_s %> ;
-var cm_head_info = { dep: $('.cm-head-dep').text(), sem: $('.cm-head-sem').text(), desc:$('.cm-head-desc').text() };
+var cm_head_info = { dep: $('.cm-head-dep').text(), year: $('.cm-head-year').text(), desc:$('.cm-head-desc').text() };
 
 $(document).ready(function(){
-	$('#start2_content').load('/course_maps/start2?map_id='+map_id);
+	$('#course-map-content').load('/course_maps/course_map_content?map_id='+map_id);
 	
 	$('.cm-edit-head').click(function(){
 		if($(this).html()=='編輯'){
-			$('.cm-head-dep').html('<%=j select_tag "dep", options_from_collection_for_select(Department.where("degree IN (2,3) AND use_type != ?", "no_courses").order("degree DESC"),"id","ch_name"), :prompt=>"不指定"  %>');
-			$('.cm-head-sem').html('<%=j select_tag "sem", options_for_select(Semester.where("half=1").map{ |u| [u.year, u.id] }), :prompt=>"不指定" %>');
-			$('.cm-head-grade').html('<%=j text_field_tag "grade", @course_map.total_credit%>');
+			$('.cm-head-dep').html('<%=j select_tag :dep, options_from_collection_for_select(Department.majorable.order("degree DESC"),"id","ch_name"), :prompt=>"不指定"  %>');
+			$('.cm-head-year').html('<%=j select_tag :year, options_for_select(Semester::YEARS.map{ |y| [y, y] }), :prompt=>"不指定" %>');
+			$('.cm-head-grade').html('<%=j text_field_tag :grade, @course_map.total_credit%>');
 			$("#dep option").each(function() {
   				if($(this).text() == cm_head_info['dep']) {
     				$(this).attr('selected', 'selected');            
   				}                        
 			});
-			$("#sem option:contains(" + cm_head_info['sem'] + ")").attr('selected', 'selected');
+			$("#year option:contains(" + cm_head_info['year'] + ")").attr('selected', 'selected');
 			$('.cm-head-desc').html('<%=j text_area_tag "desc", '', {class:"form-control"}%>');
 			$('#desc').html(cm_head_info['desc']);
 			$(this).html('<%=fa_icon "check",:class=>"btn btn-circle btn-success" %>');
 		}else{//post 
 			var dep = ($('#dep').val()) ? $('#dep').val() : 0 ;
-			var sem = ($('#sem').val()) ? $('#sem').val() : 0 ;		
+			var year = ($('#year').val()) ? $('#year').val() : 0 ;		
 			var grade = ($('#grade').val()) ? $('#grade').val() : 0 ;	
 			cm_head_info['dep'] = $('#dep option:selected').text() ;
-			cm_head_info['sem'] = $('#sem option:selected').text() ;
+			cm_head_info['year'] = $('#year option:selected').text() ;
 			cm_head_info['desc'] = $('#desc').val() ;
 			$.ajax({
 				//async: false ,
@@ -60,13 +60,13 @@ $(document).ready(function(){
 				data:{
 					map_id: map_id,
 					dep: dep,
-					sem: sem,
+					year: year,
 					grade: grade,
 					desc: $('#desc').val()
 				},	
 				success: function(data){			
 					$('.cm-head-dep').html(cm_head_info['dep']);
-					$('.cm-head-sem').html(cm_head_info['sem']);
+					$('.cm-head-year').html(cm_head_info['year']);
 					$('.cm-head-grade').html(grade);
 					$('.cm-head-desc').html(cm_head_info['desc'] );			
 				},	
