--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "user/coursemap-checker", "data-turbolinks-track" => true %>
 <div class="panel panel-primary" >
 	<div class="panel-heading" >
 		<h4 class="text-center">畢業學分計算</h4>
@@ -22,7 +23,7 @@
 <script>
 $(document).ready(function(){
 	$.getJSON("/user/statistics?uid=<%=params[:uid] %>", function (data) {
-		<% if @user.is_undergrad %>
+		<% if @user.is_undergrad? %>
 			$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
 
@@ -42,8 +43,9 @@ $(document).ready(function(){
 
 <% @show_report=true %>
 
-<% if @user.is_undergrad %>
-<%=render :partial=>"/user/xtmpl_common_check"%>
+<% if @user.is_undergrad? %>
+	<%=render :partial=>"/user/course_stat/xtmpl_common_check"%>
 <% end %>
-<%=render :partial=>"/user/xtmpl_cm_check"%>
+
+<%=render :partial=>"/user/course_stat/xtmpl_cm_check"%>
 <%=render :partial=>"/user/xtmpl_list_by_cosmap"%>
